Mon Jul 30 21:00:53 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (find_class_path): no retry when preferred is given.

	* variable.c (classname): if classid is set try it to find full
	  qualified class path, and then try arbitrary class path.  try
	  tmp_classpath at last even if enclosing namespace is anonymous.
	  fix r36574.  [ruby-core:42865][Bug #6078]

	* variable.c (rb_set_class_path_string, rb_set_class_path): set
	  tmp_classpath instead of classpath if the name is not permanent.

Mon Jul 30 14:24:20 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c: store anonymous class path in tmp_classpath but not in
	  classpath.  [ruby-core:42865][Bug #6078]

Mon Jul 30 13:11:54 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (DLDFLAGS): on Darwin, deprecate -flat_namespace to get
	  rid of huge imported symbols table.

	* configure.in (LIBRUBY_RELATIVE): libruby_so is not made when
	  disable-shared, so no absolute path is used for it and executable
	  file is runnable anywhere.

Mon Jul 30 01:30:10 2012  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* common.mk: add a dependency. [ruby-core:46741] [Bug #6789]

Sun Jul 29 15:44:47 2012  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* thread.c (thread_create_core): hide th->async_errinfo_mask_stack from
	  ObjectSpace.each_object. refix of r36539.

Sun Jul 29 23:57:27 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/option.c (inet_ntop): use rb_w32_inet_ntop, instead of
	  inet_ntop directly, which is unavailable on older version Windows.

	* win32/win32.c (rb_w32_inet_ntop): type should be const.

Sun Jul 29 14:20:34 2012  Kazuki Tsujimoto  <kazuki@callcc.net>

	* thread.c (Init_Thread): does not need to set klass
	  explicitly.

Sun Jul 29 06:21:04 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* win32/win32.c: suppress warning redeclared on mingw64.
	  *_s functions are declared if MINGW_HAS_SECURE_API is defined.
	  Follow up r36556.
