@@ -67,7 +67,8 @@ class TestGemPlatform < Gem::TestCase
       'x86-mswin32'            => ['x86',       'mswin32',   nil],
       'x86-mswin32_60'         => ['x86',       'mswin32',   '60'],
       'x86-mswin32-60'         => ['x86',       'mswin32',   '60'],
-      'i386-netbsdelf'         => ['x86',       'netbsdelf', nil],
+      'i386-netbsdelf5.1.'     => ['x86',       'netbsdelf', '5'],
+      'x86_64-netbsd6.99.7'    => ['x86_64',    'netbsd',    '6'],
       'i386-openbsd4.0'        => ['x86',       'openbsd',   '4.0'],
       'i386-solaris2.10'       => ['x86',       'solaris',   '2.10'],
       'i386-solaris2.8'        => ['x86',       'solaris',   '2.8'],
